--- a/index.html
+++ b/index.html
@@ -3,7 +3,209 @@
 <head>
     <meta charset="utf-8">
     <title>Задача «Про котиков»</title>
+    <link rel="stylesheet" href="index.css">
+    <!-- Load Font Awesome Icon Library -->
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+        <input id="list" class="radio-switcher" type="radio" name="switcher" value="list">
+        <label for="list"><span class="fa fa-list-ul icon"></span></label>
+
+        <input id="grid" class="radio-switcher" type="radio" name="switcher" value="grid" checked>
+        <label for="grid"><span class="fa fa-th icon"></span></label>
+    <div class="cat-container">
+        <div class="cat-card">
+            <img class="cat-image" src="cats/richard.jpg" alt="richard">
+            <div class="short-description">
+                <a href="#">Ричард</a>
+                <p>Возраст: 2 года</p>
+                <p>Порода: нет</p>
+                <p>Болезни: нет</p>
+                <p class="cat-status">Статус: ищет хозяина</p>
+            </div>
+            <div class="full-description">
+                <a href="#">Ричард</a>
+                <p>Дружелюбный, ласковый.</p>
+                <p>Возраст 2 года</p>
+                <p>Любит лениться, спать и валяться в ногах.</p>
+            </div>
+        </div>
+        <div class="cat-card">
+            <img class="cat-image" src="cats/blueberry.jpg" alt="blueberry">
+            <div class="short-description">
+                <a href="#">Голубика</a>
+                <p>Возраст: 2 года</p>
+                <p>Порода: серый лис</p>
+                <p>Болезни: нет</p>
+                <p class="cat-status">Статус: ищет хозяина</p>
+            </div>
+            <div class="full-description">
+                <a href="#">Голубика</a>
+                <p>Любит смотреть на птичек.</p>
+                <p>Возраст: 2 года</p>
+                <p>Очень активная, энергичная, всегда требует внимания.</p>
+            </div>
+        </div>
+        <div class="cat-card">
+            <img class="cat-image" src="cats/gentleman.jpg" alt="gentleman">
+            <div class="short-description">
+                <a href="#">Джентльмен</a>
+                <p>Возраст: 1 год</p>
+                <p>Порода: перс</p>
+                <p>Болезни: нет</p>
+                <p class="cat-status">Статус: ищет хозяина</p>
+            </div>
+            <div class="full-description">
+                <a href="#">Джентльмен</a>
+                <p>Фотогеничный кот-романтик, принц на белом коне.</p>
+                <p>Возраст: 1 год</p>
+                <p>
+                    Джентльмен готов скрасить любой одинокий вечер.
+                    В его объятиях таят даже самые брутальные.
+                </p>
+            </div>
+        </div>
+        <div class="cat-card">
+            <img class="cat-image" src="cats/skoda.jpg" alt="skoda">
+            <div class="short-description">
+                <a href="#">Шкода</a>
+                <p>Возраст: 1 год</p>
+                <p>Порода: нет</p>
+                <p>Болезни: нет</p>
+                <p class="cat-status">Статус: ищет хозяина</p>
+            </div>
+            <div class="full-description">
+                <a href="#">Шкода</a>
+                <p>Трудный кот-шалун.</p>
+                <p>Возраст: 1 год</p>
+                <p>
+                    Очень активный, готов устроить хаос и беспорядок всего за несколько минут.
+                    В минуты усталости бывает очень нежным.
+                </p>
+            </div>
+        </div>
+        <div class="cat-card">
+            <img class="cat-image" src="cats/bodybuilder.jpg" alt="bodybuilder">
+            <div class="short-description">
+                <a href="#">Бодибилдер</a>
+                <p>Возраст: 4 года</p>
+                <p>Порода: снежок</p>
+                <p>Болезни: нет</p>
+                <p class="cat-status">Статус: ищет хозяина</p>
+            </div>
+            <div class="full-description">
+                <a href="#">Бодибилдер</a>
+                <p>Возраст: 4 года</p>
+                <p>Его кошачьи бицепсы всё говорят за себя.</p>
+            </div>
+        </div>
+        <div class="cat-card">
+            <img class="cat-image" src="cats/blacky.jpg" alt="blacky">
+            <div class="short-description">
+                <a href="#">Уголёк</a>
+                <p>Возраст: 2 года</p>
+                <p>Порода: угольный кот</p>
+                <p>Болезни: нет</p>
+                <p class="cat-status">Статус: ищет хозяина</p>
+            </div>
+            <div class="full-description">
+                <a href="#">Уголёк</a>
+                <p>Скромный, тихий кот.</p>
+                <p>Возраст: 2 года</p>
+                <p>Немного боится людей, хорошо ладит с другими животными.</p>
+            </div>
+        </div>
+        <div class="cat-card">
+            <img class="cat-image" src="cats/stranger.jpg" alt="stranger">
+            <div class="short-description">
+                <a href="#">Бродяга</a>
+                <p>Возраст: 4 года</p>
+                <p>Порода: мейн-кун</p>
+                <p>Болезни: нет</p>
+                <p class="cat-status">Статус: ищет хозяина</p>
+            </div>
+            <div class="full-description">
+                <a href="#">Бродяга</a>
+                <p>Возраст: 4 года</p>
+                <p>Любит гулять на свежем воздухе, составит компанию на время утренней пробежки.</p>
+            </div>
+        </div>
+        <div class="cat-card">
+            <img class="cat-image" src="cats/felix.jpg" alt="felix">
+            <div class="short-description">
+                <a href="#">Феликс</a>
+                <p>Возраст: 2 года</p>
+                <p>Порода: вислоухий</p>
+                <p>Болезни: нет</p>
+                <p class="cat-status">Статус: ищет хозяина</p>
+            </div>
+            <div class="full-description">
+                <a href="#">Феликс</a>
+                <p>Возраст: 2 года</p>
+                <p>Начинающий черепаший наездник.</p>
+            </div>
+        </div>
+        <div class="cat-card">
+            <img class="cat-image" src="cats/sausage.jpg" alt="sausage">
+            <div class="short-description">
+                <a href="#">Баварская Длинношерстная Сосиска</a>
+                <p>Возраст: 7 месяцев</p>
+                <p>Порода: манчкин</p>
+                <p>Болезни: нет</p>
+                <p class="cat-status">Статус: ищет хозяина</p>
+            </div>
+            <div class="full-description">
+                <a href="#">Баварская Длинношерстная Сосиска</a>
+                <p>Веселая и дружелюбная</p>
+                <p>Возраст: 7 месяцев</p>
+            </div>
+        </div>
+        <div class="cat-card">
+            <img class="cat-image" src="cats/grace.jpg" alt="grace">
+            <div class="short-description">
+                <a href="#">Грация</a>
+                <p>Возраст: 2 года</p>
+                <p>Порода: сфинкс</p>
+                <p>Болезни: нет</p>
+                <p class="cat-status">Статус: ищет хозяина</p>
+            </div>
+            <div class="full-description">
+                <a href="#">Грация</a>
+                <p>Возраст: 2 года</p>
+                <p>Плохо ладит с другими животными, любит быть в центре внимания.</p>
+            </div>
+        </div>
+        <div class="cat-card">
+            <img class="cat-image" src="cats/squirrel.jpg" alt="squirrel">
+            <div class="short-description">
+                <a href="#">Белочка</a>
+                <p>Возраст: 1 год</p>
+                <p>Порода: сомали</p>
+                <p>Болезни: нет</p>
+                <p class="cat-status">Статус: ищет хозяина</p>
+            </div>
+            <div class="full-description">
+                <a href="#">Белочка</a>
+                <p>Возраст: 1 год</p>
+                <p>Юркая, энергичная, обожает забираться на полочки и шкафы.</p>
+            </div>
+        </div>
+        <div class="cat-card">
+            <img class="cat-image" src="cats/flat-face.jpg" alt="flat">
+            <div class="short-description">
+                <a href="#">Мистер Флэт Фэйс</a>
+                <p>Возраст: 2 года</p>
+                <p>Порода: перс</p>
+                <p>Болезни: нет</p>
+                <p class="cat-status">Статус: ищет хозяина</p>
+            </div>
+            <div class="full-description">
+                <a href="#">Мистер Флэт Фэйс</a>
+                <p>Возраст: 2 года</p>
+                <p>Несмотря на свою серьезность, любит всё и вся.</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
