--- a/index.html
+++ b/index.html
@@ -16,49 +16,49 @@
         <input id="grid" class="radio-switcher" type="radio" name="switcher" value="grid" checked>
         <label for="grid"><span class="fa fa-th icon"></span></label>
     <div class="cat-container">
-        <div class="cat-card">
+        <a href="#" class="cat-card">
             <img class="cat-image" src="cats/richard.jpg" alt="richard">
             <div class="short-description">
-                <a href="#">Ричард</a>
+                <h3>Ричард</h3>
                 <p>Возраст: 2 года</p>
                 <p>Порода: нет</p>
                 <p>Болезни: нет</p>
                 <p class="cat-status">Статус: ищет хозяина</p>
             </div>
             <div class="full-description">
-                <a href="#">Ричард</a>
+                <h3>Ричард</h3>
                 <p>Дружелюбный, ласковый.</p>
                 <p>Возраст 2 года</p>
                 <p>Любит лениться, спать и валяться в ногах.</p>
             </div>
-        </div>
-        <div class="cat-card">
+        </a>
+        <a href="#" class="cat-card">
             <img class="cat-image" src="cats/blueberry.jpg" alt="blueberry">
             <div class="short-description">
-                <a href="#">Голубика</a>
+                <h3>Голубика</h3>
                 <p>Возраст: 2 года</p>
                 <p>Порода: серый лис</p>
                 <p>Болезни: нет</p>
                 <p class="cat-status">Статус: ищет хозяина</p>
             </div>
             <div class="full-description">
-                <a href="#">Голубика</a>
+                <h3>Голубика</h3>
                 <p>Любит смотреть на птичек.</p>
                 <p>Возраст: 2 года</p>
                 <p>Очень активная, энергичная, всегда требует внимания.</p>
             </div>
-        </div>
-        <div class="cat-card">
+        </a>
+        <a class="cat-card">
             <img class="cat-image" src="cats/gentleman.jpg" alt="gentleman">
             <div class="short-description">
-                <a href="#">Джентльмен</a>
+                <h3>Джентльмен</h3>
                 <p>Возраст: 1 год</p>
                 <p>Порода: перс</p>
                 <p>Болезни: нет</p>
                 <p class="cat-status">Статус: ищет хозяина</p>
             </div>
             <div class="full-description">
-                <a href="#">Джентльмен</a>
+                <h3>Джентльмен</h3>
                 <p>Фотогеничный кот-романтик, принц на белом коне.</p>
                 <p>Возраст: 1 год</p>
                 <p>
@@ -66,18 +66,18 @@
                     В его объятиях таят даже самые брутальные.
                 </p>
             </div>
-        </div>
-        <div class="cat-card">
+        </a>
+        <a href="#" class="cat-card">
             <img class="cat-image" src="cats/skoda.jpg" alt="skoda">
             <div class="short-description">
-                <a href="#">Шкода</a>
+                <h3>Шкода</h3>
                 <p>Возраст: 1 год</p>
                 <p>Порода: нет</p>
                 <p>Болезни: нет</p>
                 <p class="cat-status">Статус: ищет хозяина</p>
             </div>
             <div class="full-description">
-                <a href="#">Шкода</a>
+                <h3>Шкода</h3>
                 <p>Трудный кот-шалун.</p>
                 <p>Возраст: 1 год</p>
                 <p>
@@ -85,128 +85,128 @@
                     В минуты усталости бывает очень нежным.
                 </p>
             </div>
-        </div>
-        <div class="cat-card">
+        </a>
+        <a href="#" class="cat-card">
             <img class="cat-image" src="cats/bodybuilder.jpg" alt="bodybuilder">
             <div class="short-description">
-                <a href="#">Бодибилдер</a>
+                <h3>Бодибилдер</h3>
                 <p>Возраст: 4 года</p>
                 <p>Порода: снежок</p>
                 <p>Болезни: нет</p>
                 <p class="cat-status">Статус: ищет хозяина</p>
             </div>
             <div class="full-description">
-                <a href="#">Бодибилдер</a>
+                <h3>Бодибилдер</h3>
                 <p>Возраст: 4 года</p>
                 <p>Его кошачьи бицепсы всё говорят за себя.</p>
             </div>
-        </div>
-        <div class="cat-card">
+        </a>
+        <a href="#" class="cat-card">
             <img class="cat-image" src="cats/blacky.jpg" alt="blacky">
             <div class="short-description">
-                <a href="#">Уголёк</a>
+                <h3>Уголёк</h3>
                 <p>Возраст: 2 года</p>
                 <p>Порода: угольный кот</p>
                 <p>Болезни: нет</p>
                 <p class="cat-status">Статус: ищет хозяина</p>
             </div>
             <div class="full-description">
-                <a href="#">Уголёк</a>
+                <h3>Уголёк</h3>
                 <p>Скромный, тихий кот.</p>
                 <p>Возраст: 2 года</p>
                 <p>Немного боится людей, хорошо ладит с другими животными.</p>
             </div>
-        </div>
-        <div class="cat-card">
+        </a>
+        <a href="#" class="cat-card">
             <img class="cat-image" src="cats/stranger.jpg" alt="stranger">
             <div class="short-description">
-                <a href="#">Бродяга</a>
+                <h3>Бродяга</h3>
                 <p>Возраст: 4 года</p>
                 <p>Порода: мейн-кун</p>
                 <p>Болезни: нет</p>
                 <p class="cat-status">Статус: ищет хозяина</p>
             </div>
             <div class="full-description">
-                <a href="#">Бродяга</a>
+                <h3>Бродяга</h3>
                 <p>Возраст: 4 года</p>
                 <p>Любит гулять на свежем воздухе, составит компанию на время утренней пробежки.</p>
             </div>
-        </div>
-        <div class="cat-card">
+        </a>
+        <a href="#" class="cat-card">
             <img class="cat-image" src="cats/felix.jpg" alt="felix">
             <div class="short-description">
-                <a href="#">Феликс</a>
+                <h3>Феликс</h3>
                 <p>Возраст: 2 года</p>
                 <p>Порода: вислоухий</p>
                 <p>Болезни: нет</p>
                 <p class="cat-status">Статус: ищет хозяина</p>
             </div>
             <div class="full-description">
-                <a href="#">Феликс</a>
+                <h3>Феликс</h3>
                 <p>Возраст: 2 года</p>
                 <p>Начинающий черепаший наездник.</p>
             </div>
-        </div>
-        <div class="cat-card">
+        </a>
+        <a href="#" class="cat-card">
             <img class="cat-image" src="cats/sausage.jpg" alt="sausage">
             <div class="short-description">
-                <a href="#">Баварская Длинношерстная Сосиска</a>
+                <h3>Баварская Длинношерстная Сосиска</h3>
                 <p>Возраст: 7 месяцев</p>
                 <p>Порода: манчкин</p>
                 <p>Болезни: нет</p>
                 <p class="cat-status">Статус: ищет хозяина</p>
             </div>
             <div class="full-description">
-                <a href="#">Баварская Длинношерстная Сосиска</a>
+                <h3>Баварская Длинношерстная Сосиска</h3>
                 <p>Веселая и дружелюбная</p>
                 <p>Возраст: 7 месяцев</p>
             </div>
-        </div>
-        <div class="cat-card">
+        </a>
+        <a href="#" class="cat-card">
             <img class="cat-image" src="cats/grace.jpg" alt="grace">
             <div class="short-description">
-                <a href="#">Грация</a>
+                <h3>Грация</h3>
                 <p>Возраст: 2 года</p>
                 <p>Порода: сфинкс</p>
                 <p>Болезни: нет</p>
                 <p class="cat-status">Статус: ищет хозяина</p>
             </div>
             <div class="full-description">
-                <a href="#">Грация</a>
+                <h3>Грация</h3>
                 <p>Возраст: 2 года</p>
                 <p>Плохо ладит с другими животными, любит быть в центре внимания.</p>
             </div>
-        </div>
-        <div class="cat-card">
+        </a>
+        <a href="#" class="cat-card">
             <img class="cat-image" src="cats/squirrel.jpg" alt="squirrel">
             <div class="short-description">
-                <a href="#">Белочка</a>
+                <h3>Белочка</h3>
                 <p>Возраст: 1 год</p>
                 <p>Порода: сомали</p>
                 <p>Болезни: нет</p>
                 <p class="cat-status">Статус: ищет хозяина</p>
             </div>
             <div class="full-description">
-                <a href="#">Белочка</a>
+                <h3>Белочка</h3>
                 <p>Возраст: 1 год</p>
                 <p>Юркая, энергичная, обожает забираться на полочки и шкафы.</p>
             </div>
-        </div>
-        <div class="cat-card">
+        </a>
+        <a href="#" class="cat-card">
             <img class="cat-image" src="cats/flat-face.jpg" alt="flat">
             <div class="short-description">
-                <a href="#">Мистер Флэт Фэйс</a>
+                <h3>Мистер Флэт Фэйс</h3>
                 <p>Возраст: 2 года</p>
                 <p>Порода: перс</p>
                 <p>Болезни: нет</p>
                 <p class="cat-status">Статус: ищет хозяина</p>
             </div>
             <div class="full-description">
-                <a href="#">Мистер Флэт Фэйс</a>
+                <h3>Мистер Флэт Фэйс</h3>
                 <p>Возраст: 2 года</p>
                 <p>Несмотря на свою серьезность, любит всё и вся.</p>
             </div>
-        </div>
+        </a>
     </div>
 </body>
 </html>
