Add contact information

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
 
         <input id="grid" class="radio-switcher" type="radio" name="switcher" value="grid" checked>
         <label for="grid"><span class="fa fa-th icon"></span></label>
+
+        <div class="dropdown">
+            <span class="contacts">Контакты</span>
+            <div class="dropdown-content">
+                <span>Бабуля 8800336644</span>
+            </div>
+        </div>
     <div class="cat-container">
         <a href="#" class="cat-card">
             <img class="cat-image" src="cats/richard.jpg" alt="richard">
